--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
 <main class="flex-1"><section class="bg-gray-50 dark:bg-gray-900">
   <div class="container max-w-screen-lg mx-auto px-6 py-12 grid md:grid-cols-2 gap-4 lg:gap-16 items-center">
     <div>
-      <h1 class="text-4xl font-bold mb-4">We are UNPLASTIFY</h1>
+      <h1 class="text-4xl font-bold mb-4">We are UNPLASTIFY YOUTH</h1>
       <p class="font-light text-lg">我們是一群北一女中的學生<br>我們相信每一片土地和人同樣值得被友善對待</p>
     </div>
     <img class="rounded-lg shadow-sm" src="/bblist/up_team.jpg" alt="UNPLASTIFY" />
