--- a/public/index.html
+++ b/public/index.html
@@ -145,6 +145,26 @@
   
 </div>
 <div class="p-2">
+<a href="https://nataliepjlin.github.io/bblist/blog/placeholder-text/">
+  
+  <div class="relative">
+    <img src="https://nataliepjlin.github.io/bblist/blog-post.jpg" alt="中文測試" class="rounded-lg shadow-sm w-full h-52 object-cover" />
+    <div class="absolute top-4 right-4 rounded shadow bg-white text-gray-900 dark:bg-gray-900 dark:text-white text-sm px-2 py-0.5">
+      
+  
+    Jul 13, 21
+  
+
+
+    </div>
+  </div>
+  
+  <div class="my-2 text-xl font-semibold">中文測試</div>
+  <div class="">測試中文貼文</div>
+</a>
+  
+</div>
+<div class="p-2">
 <a href="https://nataliepjlin.github.io/bblist/blog/rich-content/">
   
   <div class="relative">
@@ -161,26 +181,6 @@
   
   <div class="my-2 text-xl font-semibold">Rich Content</div>
   <div class="">A brief description of Hugo Shortcodes</div>
-</a>
-  
-</div>
-<div class="p-2">
-<a href="https://nataliepjlin.github.io/bblist/blog/placeholder-text/">
-  
-  <div class="relative">
-    <img src="https://nataliepjlin.github.io/bblist/blog-post.jpg" alt="Placeholder Text" class="rounded-lg shadow-sm w-full h-52 object-cover" />
-    <div class="absolute top-4 right-4 rounded shadow bg-white text-gray-900 dark:bg-gray-900 dark:text-white text-sm px-2 py-0.5">
-      
-  
-    Jul 13, 21
-  
-
-
-    </div>
-  </div>
-  
-  <div class="my-2 text-xl font-semibold">Placeholder Text</div>
-  <div class="">Lorem Ipsum Dolor Si Amet</div>
 </a>
   
 </div>
